--- a/main.html
+++ b/main.html
@@ -8,8 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
+	<marquee><h1>Welcome to Accio Jobs!</h1></marquee>
+
+	<a href="https://acciojob.com/blog/"><h1>Blog</h1></a>
+
+	<img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height=200px>
+	<h1 class="blue">Brute Force vs. Optimization</h1>
+	<p class="blue">We can say that optimization is..We can say that optimization is..We can say that optimization is..</p>
+
+	<img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" height=200px>
+	<h1 class="blue">DSA vs. Competitive Programming</h1>
+	<p class="blue">DSA or Competitive programming?...DSA or Competitive programming?...DSA or Competitive programming?...</p>
+
+	<img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" height=200px>
+	<h1 class="blue">Complete Guide on FlexBox</h1>
+	<p class="blue">As a job seeker, you may wonder...As a job seeker, you may wonder...As a job seeker, you may wonder...</p>
 
 </body>
 
