--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js"></script>
 	<marquee><h1>Welcome to Accio Jobs!</h1></marquee>
 
-	<a href="https://acciojob.com/blog/"><h1>Blog</h1></a>
+	<h1><a href="https://acciojob.com/blog/">Blog</a></h1>
 
 	<img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height=200px>
 	<h1 class="blue">Brute Force vs. Optimization</h1>
